<resources>
    <string name="app_name">TestMusic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Nav menu Strings-->
    <string name="user_name">User Name</string>
    <string name="user_email">user@email.com</string>

    <string name="action_music">Music</string>
    <string name="action_shows">Shows</string>
    <string name="action_profile">Profile</string>
    <string name="action_created_playlists">Created Playlists</string>
    <string name="action_hearted_playlists">Hearted Playlists</string>
    <string name="action_settings">Settings</string>

    <!-- List item Strings-->
    <string name="song_name">Stars &amp; Moon</string>
    <string name="song_genre">Original mix</string>
    <string name="song_album">Leonardo Gonnelli</string>
    <string name="song_heart_count">213</string>
    <string name="song_play_count">4K</string>
    <string name="song_play_time">5:00</string>

</resources>
