<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_music"
        android:icon="@drawable/ic_vector_music"
        android:title="@string/action_music" />
    <item
        android:id="@+id/action_shows"
        android:icon="@drawable/ic_vector_shows"
        android:title="@string/action_shows" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_vector_profile"
        android:title="@string/action_profile" />
    <item
        android:id="@+id/action_created_playlists"
        android:icon="@drawable/ic_vector_playlists"
        android:title="@string/action_created_playlists" />
    <item
        android:id="@+id/action_hearted_playlists"
        android:icon="@drawable/ic_vector_hearted_playlists"
        android:title="@string/action_hearted_playlists" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_vector_settings"
        android:title="@string/action_settings"/>
</menu>
